# cli-program

./: .gitignore  Cargo.toml  README.md
data/: Tab 1.html  Tab 1.txt  Tab 2.html  Tab 4.html  Tab 7.html
src/: app.rs  export.rs  main.rs  tests.rs  text_input.rs  ui.rs
tests/: app-test.rs  app.rs
